# care-baby-ivy

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20240809_add_tag_label_lower_index.py
app/: main.py
app/api/v1/: children.py  tags.py
app/core/: config.py  db.py
app/migrations/: README  env.py  script.py.mako
app/migrations/versions/: 202409080001_init_child_tag_article_tables.py  27a92014095d_create_tags_table.py  7e9d1f8c4d13_add_tag_label_lower_index.py
app/models/: __init__.py  article.py  base.py  child.py  tag.py
app/schemas/: child.py  tags.py
app/services/: synonyms.py  tagging.py
scripts/: check_synonyms.py  seed_tags.py
taxonomy/: synonyms.json  tags_taxonomy.json
tests/: conftest.py  test_health.py  test_seed_tags.py  test_synonyms.py  test_tagging_service.py  test_tags_api.py  test_tags_suggest_api.py
