[project]
name = "care-baby-ivy"
version = "0.1.0"
description = "FastAPI skeleton with Dockerized Postgres and healthcheck"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]
readme = "README.md"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "sqlalchemy",
  "alembic",
  "psycopg2-binary",
  "python-dotenv",
  "pytest",
  "httpx",
  "ruff",
  "black",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-select = ["B", "C4", "I", "N", "UP"]
extend-ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

